--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-b*{
+*{
     text-align: center;
     color:rgb(177, 173, 219);
+    margin:
 }
 form{
     padding: 10px 0;
@@ -9,4 +10,4 @@ form{
 }
 ul{
     list-style-type: none;
-}
+} 
